--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,81 @@
+body {
+  margin: 0;
+  background-color: #f8f8f8;
+  height: 100%;
+}
+
+.header {
+  color: #cdcdcd;
+}
+
 .react-flow__node-mindmap {
   background: white;
   border-radius: 2px;
   border: 1px solid transparent;
   padding: 2px 5px;
   font-weight: 700;
+}
+.react-flow__handle.target {
+  top: 50%;
+  pointer-events: none;
+  opacity: 0;
+}
+.react-flow__handle.source {
+  top: 0;
+  left: 0;
+  transform: none;
+  background: #f6ad55;
+  height: 100%;
+  width: 100%;
+  border-radius: 2px;
+  border: none;
+}
+
+/* we want the connection line to be below the node */
+.react-flow .react-flow__connectionline {
+  z-index: 0;
+}
+
+/* pointer-events: none so that the click for the connection goes through */
+.inputWrapper {
+  display: flex;
+  height: 40px;
+  position: relative;
+  z-index: 1;
+  pointer-events: none;
+}
+
+/* pointer-events: all so that we can use the drag handle (here the user cant start a new connection) */
+.dragHandle {
+  background: transparent;
+  width: 14px;
+  height: 100%;
+  margin-right: 4px;
+  display: flex;
+  align-items: center;
+  pointer-events: all;
+}
+
+/* pointer-events: none by default */
+.input {
+  border: none;
+  padding: 0 2px;
+  border-radius: 1px;
+  font-weight: 700;
+  background: transparent;
+  height: 100%;
+  color: #222;
+  pointer-events: none;
+}
+
+/* pointer-events: all when it's focused so that we can type in it */
+/* .input:focus {
+  border: none;
+  outline: none;
+  background: rgba(255, 255, 255, 0.25);
+  pointer-events: all;
+} */
+.btnbtn {
+  pointer-events: all;
+  cursor: pointer;
 }
